fixed and finished cart management
