# controllers/Cart.js
@@ -3,8 +3,8 @@
 var utils = require('../utils/writer.js');
 var Cart = require('../service/CartService');
 
-module.exports.getCart = function getBooks(req, res, next) {
-    if (!req.loggedin) {
+module.exports.getCart = function getCart(req, res, next) {
+    if (!req.session.loggedin) {
         var json = {
             "success": false,
             "errorMessage": "You are not logged in."
@@ -20,21 +20,86 @@ module.exports.getCart = function getBooks(req, res, next) {
     }
 };
 
-module.exports.addOrder = function getBooks(req, res, next) {
-    if (!req.loggedin) {
+module.exports.addOrder = function addOrder(req, res, next) {
+    if (!req.session.loggedin) {
         var json = {
             "success": false,
             "errorMessage": "You are not logged in."
         }
         utils.writeJson(res, json)
     } else {
+        var json = {
+            "success": true
+        }
         var body = req.swagger.params['body'].value;
         var id = req.session.id
+        Cart.checkISBNInCart(body.ISBN, id).then(function(check) {
+            if (check.length > 0) {
+                json = {
+                    "success": false,
+                    "errorMessage": "There is alread a book whith this ISBN in your cart."
+                }
+                utils.writeJson(res, json);
+                return;
+            }
         Cart.addOrder(body, id).then(function(response) {
-                utils.writeJson(res, response);
+                utils.writeJson(res, json);
             })
             .catch(function(response) {
-                utils.writeJson(res, response);
+                utils.writeJson(res, json);
+            });
+    }) }
+};
+
+module.exports.deleteOrder = function deleteOrder(req, res, next) {
+    if (!req.session.loggedin) {
+        var json = {
+            "success": false,
+            "errorMessage": "You are not logged in."
+        }
+        utils.writeJson(res, json)
+    } else {
+        var json = {
+            "success": true
+        }
+        var ISBN = req.swagger.params['ISBN'].value;
+        var id = req.session.id
+        Cart.checkISBNInCart(ISBN, id).then(function(check) {
+            if (check.length == 0) {
+                json = {
+                    "success": false,
+                    "errorMessage": "There isn't any book whith this ISBN in your cart."
+                }
+                utils.writeJson(res, json);
+                return;
+            }
+            Cart.deleteOrder(ISBN, id).then(function(response) {
+                    utils.writeJson(res, json);
+                })
+                .catch(function(response) {
+                    utils.writeJson(res, json);
+                });
+        })
+    }
+};
+
+module.exports.deleteOrder = function deleteOrder(req, res, next) {
+    if (!req.session.loggedin) {
+        var json = {
+            "success": false,
+            "errorMessage": "You are not logged in."
+        }
+        utils.writeJson(res, json)
+    } else {
+        var json = {
+            "success": true
+        }
+        var id = req.session.id
+        Cart.clearCart(id).then(function(response) {
+                utils.writeJson(res, json);
+            })
+            .catch(function(response) {
+                utils.writeJson(res, json);
             });
     }
 };
