# controllers/Order.js
@@ -1,14 +1,15 @@
 'use strict';
 
 var utils = require('../utils/writer.js');
-var Reservation = require('../service/ReservationService');
+var Order = require('../service/OrderService');
 
-module.exports.addReservation = function addReservation (req, res, next) {
+module.exports.addOrder = function addOrder (req, res, next) {
   var body = req.swagger.params['body'].value;
-  Reservation.addReservation(body)
+  Order.addOrder(body)
     .then(function (response) {
-      if(!req.loggedin) response = {
-        "not authorized": true
+      if(!req.session.loggedin) response = {
+        "success": false,
+        "errorMessage": "You are not logged in"
       }
       utils.writeJson(res, response);
     })
@@ -17,13 +18,14 @@ module.exports.addReservation = function addReservation (req, res, next) {
     });
 };
 
-module.exports.deleteReservation = function deleteReservation (req, res, next) {
+module.exports.deleteOrder = function deleteOrder (req, res, next) {
   var username = req.swagger.params['username'].value;
   var ISBN = req.swagger.params['ISBN'].value;
-  Reservation.deleteReservation(username, ISBN)
+  Order.deleteOrder(username, ISBN)
     .then(function (response) {
-      if(!req.loggedin) response = {
-        "not authorized": true
+      if(!req.session.loggedin) response = {
+        "success": false,
+        "errorMessage": "You are not logged in"
       }
       utils.writeJson(res, response);
     })
@@ -32,12 +34,13 @@ module.exports.deleteReservation = function deleteReservation (req, res, next) {
     });
 };
 
-module.exports.deleteUserReservations = function deleteUserReservations (req, res, next) {
+module.exports.deleteUserOrders = function deleteUserOrders (req, res, next) {
   var username = req.swagger.params['username'].value;
-  Reservation.deleteUserReservations(username)
+  Order.deleteUserOrders(username)
     .then(function (response) {
-      if(!req.loggedin) response = {
-        "not authorized": true
+      if(!req.session.loggedin) response = {
+        "success": false,
+        "errorMessage": "You are not logged in"
       }
       utils.writeJson(res, response);
     })
@@ -46,12 +49,13 @@ module.exports.deleteUserReservations = function deleteUserReservations (req, re
     });
 };
 
-module.exports.getReservationsByUsername = function getReservationsByUsername (req, res, next) {
+module.exports.getOrdersByUsername = function getOrdersByUsername (req, res, next) {
   var username = req.swagger.params['username'].value;
-  Reservation.getReservationsByUsername(username)
+  Order.getOrdersByUsername(username)
     .then(function (response) {
-      if(!req.loggedin) response = {
-        "not authorized": true
+      if(!req.session.loggedin) response = {
+        "success": false,
+        "errorMessage": "You are not logged in"
       }
       utils.writeJson(res, response);
     })
@@ -60,14 +64,15 @@ module.exports.getReservationsByUsername = function getReservationsByUsername (r
     });
 };
 
-module.exports.updateReservationBookQuantity = function updateReservationBookQuantity (req, res, next) {
+module.exports.updateOrderBookQuantity = function updateOrderBookQuantity (req, res, next) {
   var username = req.swagger.params['username'].value;
   var ISBN = req.swagger.params['ISBN'].value;
   var quantity = req.swagger.params['quantity'].value;
-  Reservation.updateReservationBookQuantity(username, ISBN, quantity)
+  Order.updateOrderBookQuantity(username, ISBN, quantity)
     .then(function (response) {
-      if(!req.loggedin) response = {
-        "not authorized": true
+      if(!req.session.loggedin) response = {
+        "success": false,
+        "errorMessage": "You are not logged in"
       }
       utils.writeJson(res, response);
     })
